@@ -17,13 +17,14 @@ package ch.cyberduck.core.io.watchservice;
  * Bug fixes, suggestions and comments should be sent to feedback@cyberduck.ch
  */
 
+import ch.cyberduck.core.AlphanumericRandomStringService;
 import ch.cyberduck.core.Local;
+import ch.cyberduck.core.LocalFactory;
 import ch.cyberduck.core.local.DisabledFileWatcherListener;
 import ch.cyberduck.core.local.FileWatcher;
 import ch.cyberduck.core.local.FileWatcherListener;
 import ch.cyberduck.core.local.LocalTouchFactory;
 
-import org.junit.Ignore;
 import org.junit.Test;
 
 import java.io.File;
@@ -33,15 +34,12 @@ import java.nio.file.WatchEvent;
 import java.nio.file.WatchKey;
 import java.nio.file.Watchable;
 import java.util.UUID;
-import java.util.concurrent.BrokenBarrierException;
-import java.util.concurrent.CyclicBarrier;
+import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
-import java.util.concurrent.TimeoutException;
 
 import static java.nio.file.StandardWatchEventKinds.*;
 import static org.junit.Assert.*;
 
-@Ignore
 public class FSEventWatchServiceTest {
 
     @Test
@@ -67,9 +65,9 @@ public class FSEventWatchServiceTest {
     @Test
     public void testListenerEventWatchService() throws Exception {
         final FileWatcher watcher = new FileWatcher(new FSEventWatchService());
-        final Local file = new Local(System.getProperty("java.io.tmpdir") + "é", UUID.randomUUID().toString());
-        final CyclicBarrier update = new CyclicBarrier(2);
-        final CyclicBarrier delete = new CyclicBarrier(2);
+        final Local file = LocalFactory.get(LocalFactory.get(System.getProperty("java.io.tmpdir")), String.format("é%s", new AlphanumericRandomStringService().random()));
+        final CountDownLatch update = new CountDownLatch(1);
+        final CountDownLatch delete = new CountDownLatch(1);
         final FileWatcherListener listener = new DisabledFileWatcherListener() {
             @Override
             public void fileWritten(final Local file) {
@@ -79,12 +77,7 @@ public class FSEventWatchServiceTest {
                 catch(IOException e) {
                     fail();
                 }
-                try {
-                    update.await(1L, TimeUnit.SECONDS);
-                }
-                catch(InterruptedException | BrokenBarrierException | TimeoutException e) {
-                    fail();
-                }
+                update.countDown();
             }
 
             @Override
@@ -95,21 +88,17 @@ public class FSEventWatchServiceTest {
                 catch(IOException e) {
                     fail();
                 }
-                try {
-                    delete.await(1L, TimeUnit.SECONDS);
-                }
-                catch(InterruptedException | BrokenBarrierException | TimeoutException e) {
-                    fail();
-                }
+                delete.countDown();
             }
         };
         LocalTouchFactory.get().touch(file);
-        watcher.register(file.getParent(), new FileWatcher.DefaultFileFilter(file), listener).await(1, TimeUnit.SECONDS);
-        final Process exec = Runtime.getRuntime().exec(String.format("echo 'Test' >> %s", file.getAbsolute()));
-        assertEquals(0, exec.waitFor());
-        update.await(1L, TimeUnit.SECONDS);
+        assertTrue(watcher.register(file.getParent(), new FileWatcher.DefaultFileFilter(file), listener).await(1, TimeUnit.SECONDS));
+        final ProcessBuilder sh = new ProcessBuilder("sh", "-c", String.format("echo 'Test' >> %s", file.getAbsolute()));
+        final Process cat = sh.start();
+        assertTrue(cat.waitFor(5L, TimeUnit.SECONDS));
+        assertTrue(update.await(5L, TimeUnit.SECONDS));
         file.delete();
-        delete.await(1L, TimeUnit.SECONDS);
+        assertTrue(delete.await(5L, TimeUnit.SECONDS));
         watcher.close();
     }
 }
